[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/game_ui.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/paddle.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/ball.gd" type="Script" id=3]
[ext_resource path="res://scripts/paddle.gd" type="Script" id=4]
[ext_resource path="res://scenes/game.gd" type="Script" id=5]
[ext_resource path="res://entities/score_area.tscn" type="PackedScene" id=6]

[node name="game_root" type="Node2D"]
script = ExtResource( 5 )

[node name="game_ui" parent="." instance=ExtResource( 1 )]

[node name="paddle_p1" parent="." instance=ExtResource( 2 )]
position = Vector2( 60, 300 )
rotation = 1.5708
scale = Vector2( 5, 1 )
script = ExtResource( 4 )

[node name="paddle_p2" parent="." instance=ExtResource( 2 )]
position = Vector2( 964, 300 )
rotation = 1.5708
scale = Vector2( 5, 1 )
script = ExtResource( 4 )
ACCELERATION = 5.0
MAX_VELOCITY = 10.0
DOWN_KEY = "ui_up"
UP_KEY = "ui_down"

[node name="top_paddle_wall" parent="." instance=ExtResource( 2 )]
position = Vector2( 503, -10 )
rotation = 1.5708
scale = Vector2( 1, 90 )

[node name="bottom_paddle_wal" parent="." instance=ExtResource( 2 )]
position = Vector2( 487, 610 )
rotation = 1.5708
scale = Vector2( 1, 90 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 480, 300 )
collision_layer = 3
script = ExtResource( 3 )
vel = Vector2( 100, 100 )

[node name="left_score_area" parent="." instance=ExtResource( 6 )]

[node name="right_score_area" parent="." instance=ExtResource( 6 )]
position = Vector2( 1044, 4 )

[connection signal="btn_pressed" from="game_ui" to="." method="_on_game_ui_btn_pressed"]
[connection signal="body_entered" from="left_score_area" to="." method="_on_left_score_area_body_entered"]
[connection signal="body_entered" from="right_score_area" to="." method="_on_right_score_area_body_entered"]
